--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -29,7 +29,7 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-        <activity android:name=".MainActivity"></activity>
-        <activity android:name=".CollectActivity" />
+        <activity android:name=".MainActivity" android:theme="@style/AppTheme"></activity>
+        <activity android:name=".CollectActivity" android:theme="@style/AppTheme"/>
     </application>
 </manifest>
